# auto-follow

./: README.md
opencv-cpp/: CMakeCache.txt  CMakeLists.txt  Makefile  auto-follow  cmake_install.cmake  ressult.txt  ultrasonic-demo.py  ultrasonic.py
opencv-cpp/calibration/: CMakeCache.txt  CMakeLists.txt  Makefile  camera_calibration  camera_calibration.cpp  camera_calibration_bp.cpp  cmake_install.cmake  default.xml  tmp.sh
opencv-cpp/calibration/test_cam/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  pics_list.xml  test_cam  test_cam.cpp  test_cam.sh  video8_test.cpp
opencv-cpp/para/: camera.xml  camera_og.xml  out_camera_data.xml
opencv-cpp/serial/: Serial.cpp  check_serial.sh
opencv-cpp/src/: findplate.cpp  findplate.h  main.cpp
opencv-cpp/src/auto_drive/: autodrive.cpp  autodrive.h
opencv-cpp/src/park/: Park.cpp  Park.h
opencv-cpp/video_get/: 4.avi  main.py
video_source_and_frame/: frame.py  frame2.py
video_source_and_frame/video_get/: 2.avi
yolov5-python/: horizon.py  local.py  onnx_runtime.py  solve_pnp.py
